<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:divider="?android:attr/dividerHorizontal"
		android:showDividers="middle"
		android:orientation="vertical">
			    
		<TextView
			 android:id="@+id/shopping_list_replace_dialog_text"
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:layout_gravity="center"
			 android:layout_margin="10sp"
			 android:textSize="18sp"
			 android:hint="@string/shopping_list_replace_dialog_hint"
			 android:textAppearance="?android:attr/textAppearanceLarge">
		</TextView>
		
		<LinearLayout
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:divider="?android:attr/dividerHorizontal"
             android:orientation="horizontal"
             android:showDividers="middle">
			<Button
			     style="?android:attr/buttonBarButtonStyle"
				 android:id="@+id/shopping_list_replace_dialog_btnappend"
				 android:layout_width="0dp"	
				 android:layout_weight="0.5"
				 android:layout_height="wrap_content"
				 android:layout_marginTop="5dp"
				 android:textSize="18sp"
				 android:text="@string/shopping_list_replace_dialog_append">
			</Button>             
			<Button
			     style="?android:attr/buttonBarButtonStyle"
				 android:id="@+id/shopping_list_repace_dialog_btnreplace"
				 android:layout_width="0dp"	
				 android:layout_weight="0.5"
				 android:layout_height="wrap_content"
				 android:layout_marginTop="5dp"
				 android:textSize="18sp"
				 android:text="@string/shopping_list_replace_dialog_replace">
			</Button>
		</LinearLayout>
</LinearLayout>