<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:divider="?android:attr/dividerHorizontal"
		android:showDividers="middle"
		android:orientation="vertical">
			    
		<EditText
			 android:id="@+id/food_list_add_dialog_text"
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:layout_gravity="center"
			 android:layout_marginTop="10sp"
			 android:layout_marginBottom="10sp"
			 android:layout_marginLeft="5sp"
			 android:layout_marginRight="5sp"
			 android:textSize="18sp"
			 android:hint="@string/food_list_add_dialog_hint"
			 android:textAppearance="?android:attr/textAppearanceLarge">
		</EditText>
		
		<LinearLayout
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:divider="?android:attr/dividerHorizontal"
             android:orientation="horizontal"
             android:showDividers="middle">
			<Button
			     style="?android:attr/buttonBarButtonStyle"
				 android:id="@+id/food_list_add_dialog_btncancel"
				 android:layout_width="0dp"	
				 android:layout_weight="0.5"
				 android:layout_height="wrap_content"
				 android:layout_marginTop="5dp"
				 android:textSize="18sp"
				 android:text="@string/food_list_add_dialog_cancel">
			</Button>             
			<Button
			     style="?android:attr/buttonBarButtonStyle"
				 android:id="@+id/food_list_add_dialog_btnsave"
				 android:layout_width="0dp"	
				 android:layout_weight="0.5"
				 android:layout_height="wrap_content"
				 android:layout_marginTop="5dp"
				 android:textSize="18sp"
				 android:text="@string/food_list_add_dialog_save">
			</Button>
		</LinearLayout>
</LinearLayout>