<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:orientation="vertical"
	    android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle" >

	    <LinearLayout
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
             android:orientation="vertical" >				    
			<TextView
				 android:id="@+id/product_list_delete_dialog_text"
				 android:layout_width="fill_parent"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center"
				 android:layout_margin="10sp"
				 android:textSize="18sp"
				 android:hint="@string/product_list_delete_dialog_hint">
			</TextView>
			
			<TextView
				 android:id="@+id/product_list_delete_dialog_list"
				 android:layout_width="fill_parent"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center"
				 android:layout_marginBottom="5sp"
				 android:layout_marginRight="10sp"
				 android:layout_marginLeft="20sp"			 			 
				 android:textSize="18sp" >
			</TextView>
		</LinearLayout>	
		
		<LinearLayout
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content"
			 android:divider="?android:attr/dividerHorizontal"
             android:orientation="horizontal"
             android:showDividers="middle" >
			<Button
			     style="?android:attr/buttonBarButtonStyle"
				 android:id="@+id/product_list_delete_dialog_btncancel"
				 android:layout_width="0dp"	
				 android:layout_weight="0.5"
				 android:layout_height="wrap_content"
				 android:layout_marginTop="5dp"
				 android:textSize="18sp"
				 android:text="@string/product_list_delete_dialog_cancel">
			</Button>						
             <Button
			     style="?android:attr/buttonBarButtonStyle"
				 android:id="@+id/product_list_delete_dialog_btnok"
				 android:layout_width="0dp"	
				 android:layout_weight="0.5"
				 android:layout_height="wrap_content"
				 android:layout_marginTop="5dp"
				 android:textSize="18sp"
				 android:text="@string/product_list_delete_dialog_ok">
			</Button>
		</LinearLayout>
</LinearLayout>